[package]
name = "batalert"
version = "0.2.0"
authors = ["Felix Ortmann <flx.ortmann@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
crossbeam-channel = "0"
futures = "0.3"
notify-rust = "4"
tokio = { version = "1.2", features = ["full"] }